补全翻译